[project]
name = "gemma4test"
version = "0.1.0"
description = "Testowanie modelu Gemma 4 na Macu M1"
authors = [
    {name = "kacper", email = "kacpro944@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, !=3.14.1, <3.15"
dependencies = [
    "transformers>=5.5.4",
    "accelerate>=1.13.0",
    "sentencepiece>=0.2.1",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "bitsandbytes (>=0.49.2,<0.50.0)",
    "mlx-lm (>=0.31.2,<0.32.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"